--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ ImplicitDifferentiation = "57b37032-215b-411a-8a7c-41a003a55207"
 TopOpt = "53a1e1a5-51bb-58a9-8a02-02056cc81109"
 
 [compat]
+TopOpt = "0.5"
 julia = "1"
 
 [extras]
