--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,10 @@ authors = ["LucasMSpereira"]
 version = "0.1.0"
 
 [deps]
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 ImplicitDifferentiation = "57b37032-215b-411a-8a7c-41a003a55207"
 TopOpt = "53a1e1a5-51bb-58a9-8a02-02056cc81109"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 julia = "1"
