--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ TopOpt = "53a1e1a5-51bb-58a9-8a02-02056cc81109"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
+Zygote = "0.6"
 julia = "1"
 
 [extras]
