--- a/Project.toml
+++ b/Project.toml
@@ -5,8 +5,15 @@ version = "0.1.0"
 
 [deps]
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 ImplicitDifferentiation = "57b37032-215b-411a-8a7c-41a003a55207"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Nonconvex = "01bcebdf-4d21-426d-b5c4-6132c1619978"
+NonconvexIpopt = "bf347577-a06d-49ad-a669-8c0e005493b8"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TopOpt = "53a1e1a5-51bb-58a9-8a02-02056cc81109"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
