--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 ChainRulesCore = "1"
 Distributions = "0.25"
 DistributionsAD = "0.6"
+ForwardDiff = "0.10"
 ImplicitDifferentiation = "0.2"
 NonconvexIpopt = "0.4"
 Reexport = "1"
