--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Uncertainty"
+name = "ReliabilityOptimization"
 uuid = "55eddd50-7f45-4398-96cf-6a37e2b16f80"
 authors = ["LucasMSpereira"]
 version = "0.1.0"
