--- a/Project.toml
+++ b/Project.toml
@@ -11,9 +11,11 @@ ImplicitDifferentiation = "57b37032-215b-411a-8a7c-41a003a55207"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NonconvexIpopt = "bf347577-a06d-49ad-a669-8c0e005493b8"
+NonconvexTOBS = "6c0b5230-d4c9-466e-bfd4-b31e6272ab65"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+TopOpt = "53a1e1a5-51bb-58a9-8a02-02056cc81109"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
