--- a/Project.toml
+++ b/Project.toml
@@ -29,12 +29,14 @@ JuliaFormatter = "1"
 NonconvexIpopt = "0.4"
 Reexport = "1"
 StaticArraysCore = "1"
+TopOpt = "0.8"
 UnPack = "1"
 Zygote = "0.6"
 julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TopOpt = "53a1e1a5-51bb-58a9-8a02-02056cc81109"
 
 [targets]
-test = ["Test"]
+test = ["Test", "TopOpt"]
