--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ FiniteDifferences = "0.12"
 ImplicitDifferentiation = "0.2"
 JuliaFormatter = "1"
 NonconvexIpopt = "0.4"
+NonconvexTOBS = "0.2"
 Reexport = "1"
 StaticArraysCore = "1"
 TopOpt = "0.8"
@@ -35,8 +36,9 @@ Zygote = "0.6"
 julia = "1"
 
 [extras]
+NonconvexTOBS = "6c0b5230-d4c9-466e-bfd4-b31e6272ab65"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TopOpt = "53a1e1a5-51bb-58a9-8a02-02056cc81109"
 
 [targets]
-test = ["Test", "TopOpt"]
+test = ["NonconvexTOBS", "Test", "TopOpt"]
